[gd_scene load_steps=7 format=2]

[ext_resource path="res://ui/Coding/InteractiveSession.tscn" type="PackedScene" id=1]
[ext_resource path="res://levels/CodingLevels/Levels/03-Operators.gd" type="Script" id=2]
[ext_resource path="res://levels/CodingLevels/Levels/03-Codes.gd" type="Script" id=3]
[ext_resource path="res://themes/red_theme.tres" type="Theme" id=4]
[ext_resource path="res://levels/Red/levels/RedCoding01.tscn" type="PackedScene" id=5]
[ext_resource path="res://themes/output_red.tres" type="Theme" id=6]

[node name="03-Operators" type="Node2D"]
script = ExtResource( 2 )
coding_resources_object = ExtResource( 3 )
interactive_session_theme = ExtResource( 4 )
output_panel_theme = ExtResource( 6 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="InteractiveSession" parent="CanvasLayer" instance=ExtResource( 1 )]

[node name="RedCoding01" parent="." instance=ExtResource( 5 )]

[node name="HTTPRequest" type="HTTPRequest" parent="."]
[connection signal="build" from="CanvasLayer/InteractiveSession" to="." method="_on_InteractiveSession_build"]
